# ops-ci-codebuild-image

./: .bumpsemver.cfg  .gitmodules  README.md  buildspec.yml  deploydest.yml
.github/workflows/: build-docker-image.yml
app/: Dockerfile  dockerd-entrypoint.sh  get_platform.sh  pyproject.toml  requirements.in  requirements.txt  runtimes.yml
infrastructure/: playbook.yml
infrastructure/group_vars/: all.yml
